# sekondly

./: .gitignore  README.md  cli.py  orchestrator.py  pyproject.toml
analysis/: kpis.py  scorer.py
data/: schema.py  store.py
report/: generator.py
report/templates/: report.html
scraper/: detail.py  location.py  search.py
sources/: __init__.py  base.py
sources/olx/: __init__.py  location.py
sources/olx/fetchers/: api.py  playwright.py
sources/olx/parsers/: detail.py  search.py
