[project]
name = "sekondly"
version = "0.1.0"
description = "Market intelligence for used goods — scrape, score, and report on second-hand listings"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "jinja2>=3.1.6",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
]
